--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .text-balance {
-  text-wrap: balance;
+  text-wrap: pretty;
 }
 
 .body-secondary {
